--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mantine/hooks": "^6.0.13",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
-    "next": "13.4.4",
+    "next": "^13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
