--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "8.4.24",
+    "prisma": "^4.15.0",
     "storybook": "^7.0.20"
   }
 }
